# DAQ-Technical-Assessment

./: .gitmodules  brainstorming.md
cloud/docs/: Redback_Racing_student_project.drawio
cloud/docs/iac_snippets/: main.tf
firmware/: .gitignore  CMakeLists.txt  CMakeLists_backup.txt  Dockerfile  answer.txt  docker-compose_backup2.yml
firmware/solution/: CMakeLists.txt  CMakeLists_backup.txt  main.cpp  main_backup.cpp  main_stage4.cpp
firmware/solution/src/: can_decode.cpp  can_decode.hpp  dbc_simple.cpp  dbc_simple.hpp
firmware/tests/: test_decode.cpp
spyder/streaming-service/src/: temp.ts
spyder/ui/: package-lock.json  package.json  tailwind.config.js
spyder/ui/src/app/: page_backup2.tsx  page_backup3.tsx
spyder/ui/src/components/custom/: numeric.tsx
spyder/ui/src/lib/: format.ts
